--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   create_release:
     # See: .github/workflows/create_release_pr.yaml
-    if: ${{ github.head_ref == 'prepare_for_release' }}
+    if: ${{ github.head_ref == 'prepare_for_release' && github.event.pull_request.merged == true }}
     env:
       PUBLISH_DIR: publish
     runs-on: ${{ matrix.os }}
