--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,15 +24,15 @@ issue_tracker: https://github.com/sensuikan1973/pedax/issues
 version: 2.24.0+56
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
-  sdk: ">=2.18.4 <3.0.0"
-  flutter: ^3.3.8 # See: https://flutter.dev/docs/development/tools/sdk/releases
+  sdk: ">=2.18.5 <3.0.0"
+  flutter: ^3.3.9 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
   crypto: ^3.0.2
   cupertino_icons: ^1.0.5
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
-  file_selector: ^0.9.2
-  file_selector_linux: ^0.9.0
+  file_selector: ^0.9.2+2
+  file_selector_linux: ^0.9.0+1
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -47,7 +47,7 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.11 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^6.0.4
-  sentry_flutter: ^6.13.1
+  sentry_flutter: ^6.17.0
   shared_preferences: ^2.0.15
   window_size:
     git:
@@ -63,9 +63,9 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
-  msix: ^3.6.6
+  msix: ^3.7.0
   path_provider_platform_interface: ^2.0.5
-  pedantic_sensuikan1973: ^3.5.0
+  pedantic_sensuikan1973: ^3.6.0
   plugin_platform_interface: ^2.1.3
   shared_preferences_platform_interface: ^2.1.0
   url_launcher_platform_interface: ^2.1.1
