--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
   "files.associations": {
     "*.arb": "json",
     "*.mdx": "markdown"
-  }
+  },
+  "workbench.colorTheme": "Default Light+"
 }
