--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   logger: ^1.1.0
   macos_secure_bookmarks: ^0.2.1
   meta: ^1.8.0
+  package_info_plus: ^3.0.2
   pasteboard: ^0.2.0
   path: ^1.8.2
   path_provider: ^2.0.11 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
