--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -39,20 +39,18 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
       - name: dry-run deployment script with retry
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 20
-          max_attempts: 3
-          command: |
-            zsh {0}
-            echo $ZSH_NAME $ZSH_VERSION
-            REVISION=$GITHUB_SHA
-            P8_PATH="../README.md" # dummy for dry-run
+        shell: zsh {0}
+        run: |
+          echo $ZSH_NAME $ZSH_VERSION
+          REVISION=$GITHUB_SHA
+          P8_PATH="../README.md" # dummy for dry-run
 
-            ASC_KEY_ID=xxx \
-            ASC_ISSUER_ID=xxx \
-            APPLE_ID=xxx \
-            ITC_TEAM_ID=xxx \
-            ./scripts/deploy_macos_app_to_app_store.sh \
-            -revision "$REVISION" -p8-file-path "$P8_PATH" -sentry-dsn "https://example.com" \
-            --dry-run --skip-test
+          ASC_KEY_ID=${{ secrets.ASC_KEY_ID }} \
+          ASC_KEY_CONTENT=$AuthKey.p8
+          ASC_ISSUER_ID=${{ secrets.ASC_ISSUER_ID }} \
+          APPLE_ID=${{ secrets.APPLE_ID }} \
+          ITC_TEAM_ID=${{ secrets.ITC_TEAM_ID }} \
+          MATCH_PASSWORD=${{ secrets.MATCH_PASSWORD }}
+          ./scripts/deploy_macos_app_to_app_store.sh \
+          -revision "$REVISION" -p8-file-path "AuthKey.p8" -sentry-dsn "https://example.com" \
+          --dry-run --skip-test
