--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -43,14 +43,13 @@ jobs:
         run: |
           echo $ZSH_NAME $ZSH_VERSION
           REVISION=$GITHUB_SHA
-          P8_PATH="../README.md" # dummy for dry-run
 
           ASC_KEY_ID=${{ secrets.ASC_KEY_ID }} \
-          ASC_KEY_CONTENT=$AuthKey.p8
+          ASC_KEY_CONTENT_BASE64_ENCODED=${{ secrets.ASC_KEY_CONTENT_BASE64_ENCODED }}
           ASC_ISSUER_ID=${{ secrets.ASC_ISSUER_ID }} \
           APPLE_ID=${{ secrets.APPLE_ID }} \
           ITC_TEAM_ID=${{ secrets.ITC_TEAM_ID }} \
           MATCH_PASSWORD=${{ secrets.MATCH_PASSWORD }}
           ./scripts/deploy_macos_app_to_app_store.sh \
-          -revision "$REVISION" -p8-file-path "AuthKey.p8" -sentry-dsn "https://example.com" \
+          -revision "$REVISION" -sentry-dsn "https://example.com" \
           --dry-run --skip-test
