--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -40,18 +40,19 @@ jobs:
       - uses: ruby/setup-ruby@v1
       - name: dry-run deployment script with retry
         shell: zsh {0}
+        env:
+          # https://docs.fastlane.tools/best-practices/continuous-integration/github/
+          # https://docs.github.com/en/actions/security-guides/encrypted-secrets#using-encrypted-secrets-in-a-workflow
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          ASC_KEY_ID: ${{ secrets.ASC_KEY_ID }}
+          ASC_KEY_CONTENT_BASE64_ENCODED: ${{ secrets.ASC_KEY_CONTENT_BASE64_ENCODED }}
+          ASC_ISSUER_ID: ${{ secrets.ASC_ISSUER_ID }}
+          ITC_TEAM_ID: ${{ secrets.ITC_TEAM_ID }}
+          MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
         run: |
           echo $ZSH_NAME $ZSH_VERSION
           REVISION=$GITHUB_SHA
-
-          # See: https://docs.github.com/en/actions/security-guides/encrypted-secrets#using-encrypted-secrets-in-a-workflow
-          ASC_KEY_ID=${{ secrets.ASC_KEY_ID }} \
-          ASC_KEY_CONTENT_BASE64_ENCODED=${{ secrets.ASC_KEY_CONTENT_BASE64_ENCODED }}
-          ASC_ISSUER_ID=${{ secrets.ASC_ISSUER_ID }} \
-          APPLE_ID=${{ secrets.APPLE_ID }} \
-          ITC_TEAM_ID=${{ secrets.ITC_TEAM_ID }} \
-          MATCH_GIT_BASIC_AUTHORIZATION=${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }} \
-          MATCH_PASSWORD=${{ secrets.MATCH_PASSWORD }} \
           ./scripts/deploy_macos_app_to_app_store.sh \
           -revision "$REVISION" -sentry-dsn "https://example.com" \
           --dry-run --skip-test
