--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -6,9 +6,8 @@ name: Create Release
 
 on:
   workflow_dispatch:
-  pull_request:
-    branches: [main]
-    types: [closed]
+  release:
+    types: [created]
 
 jobs:
   create_release:
