--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -6,8 +6,9 @@ name: Create Release
 
 on:
   workflow_dispatch:
-  release:
-    types: [created]
+  pull_request:
+    branches: [main]
+    types: [closed]
 
 jobs:
   create_release:
