--- a/.github/workflows/deploy_macos.yaml
+++ b/.github/workflows/deploy_macos.yaml
@@ -35,9 +35,9 @@ jobs:
           ITC_TEAM_ID: ${{ secrets.ITC_TEAM_ID }}
           MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          SENTRY_DSN: ${{ secrets.SENTRY_DSN }}
         run: |
           echo $ZSH_NAME $ZSH_VERSION
           REVISION=$GITHUB_SHA
           ./scripts/deploy_macos_app_to_app_store.sh \
-          -revision "$REVISION" -sentry-dsn ${{ secrets.SENTRY_DSN }} \
-          --skip-test
+          -revision "$REVISION" --skip-test
