--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -53,6 +53,5 @@ jobs:
           SENTRY_DSN: https://example.com
         run: |
           echo $ZSH_NAME $ZSH_VERSION
-          REVISION=$GITHUB_SHA
           ./scripts/deploy_macos_app_to_app_store.sh \
-          -revision "$REVISION" --dry-run --skip-test
+          -revision "$GITHUB_SHA" --skip-test --dry-run
