--- a/.github/workflows/deploy_macos.yaml
+++ b/.github/workflows/deploy_macos.yaml
@@ -12,6 +12,8 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: $GITHUB_SHA
       - uses: subosito/flutter-action@v2.8.0
         with:
           cache: true
