--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -81,7 +81,8 @@ jobs:
 
       - uses: softprops/action-gh-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # https://github.com/softprops/action-gh-release/issues/59
+          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag_name: ${{ env.CURRENT_VERSION }}
           files: ${{ env.PUBLISH_DIR }}/pedax-${{ runner.os }}.zip
