--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -31,6 +31,9 @@ jobs:
       - run: flutter pub upgrade --null-safety
       - run: flutter pub upgrade --major-versions
 
+      # https://github.com/flutter/flutter/issues/73845#issue-785022394
+      - run: flutter build macos
+
       - name: upgrade external binary
         shell: zsh {0}
         run: ./scripts/fetch_libedax_assets.sh
