save user-customized window size and position (#1160)
* save user-customized window size and position

* flutter run -d macos

* fix

* mild rename

* add comment about not supporting linux

* add comment about window blink

* fix wrong revert

* add comment about state mixin

* mild fix comment

* fix event trigger

* prevent window blink

* fix

* fix mitake

* waitUntilReadyToShow

* mild fix NOTE link

* mild fix comment

* add delay

* add comment

* delay

* add pumpAndSettle

* mild formatting

* debug

* debug

* debug

* verbose

* revert debug strategy

* debug

* comment

* work?

* Revert "work?"

This reverts commit 81f0ff2ff2c454f3eef1f6cfae3ae2baf905f7ed.

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -69,6 +69,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     strategy:
+      # fail-fast: false
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
         include:
@@ -83,7 +84,7 @@ jobs:
             integration_test_command: |
               touch ./coverage/lcov.integration_test.info
               timeout 240 xvfb-run -a \
-              flutter test integration_test --coverage --coverage-path=./coverage/lcov.integration_test.info \
+              flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info \
               || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )
     steps:
       - uses: actions/checkout@v3
