set ITSAppUsesNonExemptEncryption false. See: https://developer.apple.com/documentation/security/complying_with_encryption_export_regulations

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -27,6 +27,9 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<!-- https://developer.apple.com/documentation/security/complying_with_encryption_export_regulations -->
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.board-games</string>
 	<key>LSApplicationQueriesSchemes</key>
