Revert "Update Info.plist (#1170)"
This reverts commit 64f5e1301e6209444c812650cc4e75a71d0c2d83.

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -29,7 +29,7 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<!-- https://developer.apple.com/documentation/security/complying_with_encryption_export_regulations -->
 	<key>ITSAppUsesNonExemptEncryption</key>
-	<true/>
+	<false/>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.board-games</string>
 	<key>LSApplicationQueriesSchemes</key>
