--- a/.github/workflows/create_release_pr.yaml
+++ b/.github/workflows/create_release_pr.yaml
@@ -77,6 +77,8 @@ jobs:
             See: https://github.com/peter-evans/create-pull-request/blob/master/docs/concepts-guidelines.md#triggering-further-workflow-runs
           branch: prepare_for_release
           delete-branch: true
+          labels: |
+            "prepare for release"
 
       # See: https://github.com/peter-evans/create-pull-request/tree/main#auto-merge
       - name: enable auto-merge
