add `fastlane` labeling rule (#1175)
* Update labeler.yml

* Update labeler.yml

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,7 +1,6 @@
 ---
 mac:
   - macos/**/*
-  - .ruby-version
   - .github/scripts/macos/**/*
   - scripts/deploy_macos_app_to_app_store.sh
 
@@ -37,3 +36,6 @@ codecov:
 documentation:
   - docs/**/*
   - README.md
+
+fastlane:
+  - macos/fastlane/**/*
