--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -61,7 +61,7 @@ jobs:
         run: ./scripts/setup_flutter.sh
       - name: install dependencies
         run: flutter pub get
-      # - run: flutter analyze --fatal-infos --fatal-warnings .
+      - run: flutter analyze --fatal-infos --fatal-warnings .
 
   # https://docs.flutter.dev/testing
   flutter_tests:
@@ -71,12 +71,12 @@ jobs:
     strategy:
       # fail-fast: false
       matrix:
-        os: [windows-latest, macos-latest, ubuntu-latest] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
+        os: [windows-latest, macos-12, ubuntu-latest] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
         include:
           - os: windows-latest
             setup_for_flutter_desktop_script: .github/scripts/windows/install_additional_requirements_for_flutter.sh
             integration_test_command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info
-          - os: macos-latest
+          - os: macos-12
             setup_for_flutter_desktop_script: .github/scripts/macos/install_additional_requirements_for_flutter.sh
             integration_test_command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info
           - os: ubuntu-latest
