--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,24 +32,24 @@ dependencies:
   cupertino_icons: ^1.0.5
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
   file_selector: ^0.9.2+2
-  file_selector_linux: ^0.9.0+1
+  file_selector_linux: ^0.9.1
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
   font_awesome_flutter: ^10.3.0
   intl: ^0.17.0 # Use the pinned version from flutter_localizations
-  libedax4dart: ^5.10.0
+  libedax4dart: ^5.11.2
   logger: ^1.1.0
   macos_secure_bookmarks: ^0.2.1
   meta: ^1.8.0
   package_info_plus: ^3.0.2
   pasteboard: ^0.2.0
   path: ^1.8.2
-  path_provider: ^2.0.11 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
+  path_provider: ^2.0.12 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^6.0.5
-  sentry_flutter: ^6.18.2
-  shared_preferences: ^2.0.16
+  sentry_flutter: ^6.19.0
+  shared_preferences: ^2.0.17
   window_manager: ^0.3.0 # for "onWindowResize" and "onWindowMoved"
   window_size:
     git:
@@ -68,7 +68,7 @@ dev_dependencies:
     sdk: flutter
   msix: ^3.7.0
   path_provider_platform_interface: ^2.0.5
-  pedantic_sensuikan1973: ^4.0.1
+  pedantic_sensuikan1973: ^4.1.2
   plugin_platform_interface: ^2.1.3
   shared_preferences_platform_interface: ^2.1.0
   url_launcher_platform_interface: ^2.1.1
