--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -103,12 +103,8 @@ jobs:
         run: flutter pub get
 
       # https://docs.flutter.dev/testing#widget-tests
-      - name: run widget test with retry
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 5
-          max_attempts: 3
-          command: flutter test --concurrency=1 --coverage --coverage-path=./coverage/lcov.widget_test.info
+      - name: widget test
+        run: flutter test --concurrency=1 --coverage --coverage-path=./coverage/lcov.widget_test.info
       # https://docs.codecov.com/docs/merging-reports#multiple-languages
       - uses: codecov/codecov-action@v3
         with: # ref: https://github.com/codecov/codecov-action/blob/v3.1.0/.github/workflows/main.yml
@@ -120,12 +116,8 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       # https://docs.flutter.dev/testing#integration-tests
-      - name: run integration test with retry
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 5
-          max_attempts: 3
-          command: ${{ matrix.integration_test_command }}
+      - name: integration test
+        run: ${{ matrix.integration_test_command }}
       # https://docs.codecov.com/docs/merging-reports#multiple-languages
       - uses: codecov/codecov-action@v3
         with: # ref: https://github.com/codecov/codecov-action/blob/v3.1.0/.github/workflows/main.yml
