--- a/.yamllint.yaml
+++ b/.yamllint.yaml
@@ -1,11 +1,6 @@
 ---
 # See: https://yamllint.readthedocs.io/en/stable/configuration.html#ignoring-paths
-# See: https://github.com/adrienverge/yamllint/issues/360
-ignore: |
-  .dart_tool
-  vendor
-  node_modules
-
+ignore-from-file: .gitignore
 extends: default
 
 # See: https://yamllint.readthedocs.io/en/stable/rules.html
