--- a/.github/workflows/bump_ruby_version.yaml
+++ b/.github/workflows/bump_ruby_version.yaml
@@ -24,6 +24,8 @@ jobs:
           ~/.rbenv/bin/rbenv install $latest_version
           ~/.rbenv/bin/rbenv local $latest_version
 
+      - uses: ruby/setup-ruby@v1
+
       # See: https://github.com/peter-evans/create-pull-request/tree/master#reference-example
       - name: create PR
         id: create_pull_request
