--- a/.github/workflows/bump_node_version.yaml
+++ b/.github/workflows/bump_node_version.yaml
@@ -16,7 +16,7 @@ jobs:
         run: |
           brew install nodenv
           # See: https://github.com/nodenv/node-build#upgrading
-          brew update && brew upgrade node-build
+          brew update && brew upgrade nodenv node-build
 
       - name: install latest nodejs version
         run: |
