--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   crypto: ^3.0.2
   cupertino_icons: ^1.0.5
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
-  file_selector: ^0.9.2+2
-  file_selector_linux: ^0.9.1
+  file_selector: ^0.9.2+3
+  file_selector_linux: ^0.9.1+1
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -40,16 +40,16 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   intl: ^0.17.0 # Use the pinned version from flutter_localizations
   libedax4dart: ^5.11.2
-  logger: ^1.1.0
+  logger: ^1.2.2
   macos_secure_bookmarks: ^0.2.1
   meta: ^1.8.0
   package_info_plus: ^3.0.3
   pasteboard: ^0.2.0
   path: ^1.8.2
-  path_provider: ^2.0.12 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
+  path_provider: ^2.0.13 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^6.0.5
   sentry_flutter: ^6.20.1
-  shared_preferences: ^2.0.17
+  shared_preferences: ^2.0.18
   window_manager: ^0.3.0 # for "onWindowResize" and "onWindowMoved"
   window_size:
     git:
@@ -61,17 +61,17 @@ dependencies:
 
 dev_dependencies:
   cider: ^0.1.3
-  file_selector_platform_interface: ^2.4.0
+  file_selector_platform_interface: ^2.4.1
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
   msix: ^3.8.2
-  path_provider_platform_interface: ^2.0.5
+  path_provider_platform_interface: ^2.0.6
   pedantic_sensuikan1973: ^4.2.0
-  plugin_platform_interface: ^2.1.3
-  shared_preferences_platform_interface: ^2.1.0
-  url_launcher_platform_interface: ^2.1.1
+  plugin_platform_interface: ^2.1.4
+  shared_preferences_platform_interface: ^2.1.1
+  url_launcher_platform_interface: ^2.1.2
 
 flutter:
   uses-material-design: true
