--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,9 @@ dev_dependencies:
   path_provider_platform_interface: ^2.0.6
   pedantic_sensuikan1973: ^4.3.0
   plugin_platform_interface: ^2.1.4
-  shared_preferences_platform_interface: ^2.1.1
+  # https://pub.dev/packages/shared_preferences_platform_interface/changelog#220
+  # https://github.com/sensuikan1973/pedax/pull/1387#issuecomment-1489619974
+  shared_preferences_platform_interface: 2.1.1
 
 flutter:
   uses-material-design: true
