--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ version: 5.0.0+89
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
   sdk: ">=2.19.6 <4.0.0"
-  flutter: ^3.7.9 # See: https://flutter.dev/docs/development/tools/sdk/releases
+  flutter: ^3.7.10 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
   crypto: ^3.0.2
@@ -39,7 +39,7 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.4.0
   intl: ^0.17.0 # Use the pinned version from flutter_localizations
-  libedax4dart: ^6.1.0
+  libedax4dart: ^6.2.1
   logger: ^1.3.0
   macos_secure_bookmarks: ^0.2.1
   meta: ^1.8.0
@@ -48,8 +48,8 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.14 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^6.0.5
-  sentry_flutter: ^7.3.0
-  shared_preferences: ^2.0.20
+  sentry_flutter: ^7.4.0
+  shared_preferences: ^2.1.0
   window_manager: ^0.3.1 # for "onWindowResize" and "onWindowMoved"
   window_size:
     git:
@@ -60,7 +60,7 @@ dependencies:
       ref: main
 
 dev_dependencies:
-  cider: ^0.1.4
+  cider: ^0.1.5
   file_selector_platform_interface: ^2.4.1
   flutter_test:
     sdk: flutter
@@ -72,7 +72,7 @@ dev_dependencies:
   plugin_platform_interface: ^2.1.4
   # https://pub.dev/packages/shared_preferences_platform_interface/changelog#220
   # https://github.com/sensuikan1973/pedax/pull/1387#issuecomment-1489619974
-  shared_preferences_platform_interface: 2.1.1
+  shared_preferences_platform_interface: ^2.2.0
 
 flutter:
   uses-material-design: true
