--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -37,6 +37,9 @@ jobs:
         shell: zsh {0}
         run: .github/scripts/macos/install_additional_requirements_for_flutter.sh
 
+      - name: bump version
+        run: flutter pub run cider bump patch --bump-build --pre ci
+
       - uses: ruby/setup-ruby@v1
       - name: dry-run deployment script
         shell: zsh {0}
