--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -42,6 +42,12 @@ jobs:
           flutter pub get
           flutter pub run cider bump patch --bump-build --pre ci
 
+      - name: git commmit
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "gh-actions"
+          git commit -m "temporary bump version for ci"
+
       - uses: ruby/setup-ruby@v1
       - name: dry-run deployment script
         shell: zsh {0}
