--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -46,6 +46,7 @@ jobs:
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "gh-actions"
+          git add -A
           git commit -m "temporary bump version for ci"
 
       - uses: ruby/setup-ruby@v1
