--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -37,6 +37,18 @@ jobs:
         shell: zsh {0}
         run: .github/scripts/macos/install_additional_requirements_for_flutter.sh
 
+      - name: bump version
+        run: |
+          flutter pub get
+          flutter pub run cider bump patch --bump-build --pre ci
+
+      - name: git commmit
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "gh-actions"
+          git add -A
+          git commit -m "temporary bump version for ci"
+
       - uses: ruby/setup-ruby@v1
       - name: dry-run deployment script
         shell: zsh {0}
@@ -54,4 +66,4 @@ jobs:
         run: |
           echo $ZSH_NAME $ZSH_VERSION
           ./scripts/deploy_macos_app_to_app_store.sh \
-          -revision "$GITHUB_SHA" --skip-test --dry-run
+          -revision $(git rev-parse HEAD) --skip-test --dry-run
