--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -78,7 +78,9 @@ jobs:
             integration_test_command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info
           - os: macos-latest
             setup_for_flutter_desktop_script: .github/scripts/macos/install_additional_requirements_for_flutter.sh
-            integration_test_command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info
+            integration_test_command: |
+              echo "skipped. If https://github.com/sensuikan1973/pedax/issues/1221#issuecomment-1502852253 is resolved, you should run this.""
+              # flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info
           - os: ubuntu-latest
             setup_for_flutter_desktop_script: .github/scripts/linux/install_additional_requirements_for_flutter.sh
             integration_test_command: |
